--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 # Site
 repository: sproogen/resume-theme
-favicon: images/favicon.ico
-
+favicon: images/1666576198989.jpeg
 # Content configuration version
 version: 2
 
