--- a/_config.yml
+++ b/_config.yml
@@ -44,9 +44,7 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
-
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  Dedicated Behavioral Specialist with a strong foundation in therapeutic practices, financial administration, and advocacy. Skilled in managing diverse client needs, enhancing social and emotional skills in children, and maintaining accurate financial records. Committed to fostering supportive environments through targeted interventions, educational support, and resource coordination
 
 content:
   - title: Projects # Title for the section
