--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: images/1666576198989.jpeg
 about_content: | # this will include new lines to allow paragraphs
   Dedicated Behavioral Specialist with a strong foundation in therapeutic practices, financial administration, and advocacy. Skilled in managing diverse client needs, enhancing social and emotional skills in children, and maintaining accurate financial records. Committed to fostering supportive environments through targeted interventions, educational support, and resource coordination
 
